Fix T49422: Metadata not showing in OpenGL renders

Own regression since recent optimization.